# deepseek-fr-2api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  vercel.json
.lrnev/: ARCHITECTURE.md  PROJECT.md
.lrnev/scenes/00-default/: scene.md
.lrnev/steering/: ADR_TRIGGERS.md  CORE_PRINCIPLES.md  MEMORY_TRIGGERS.md  SCOPE_RULES.md
api/: index.py
deepseek_all_in_one/: __init__.py  api.py  client.py  config.py  logging.py  openai_models.py  turnstile.py
plugins/turnstile-solver/: README.md  pyproject.toml
plugins/turnstile-solver/turnstile_solver/: __init__.py  solver.py
tests/: test_api.py  test_client_errors.py  test_config.py  test_openai_models.py  test_turnstile_concurrency.py
